# movie-review-sentiment

./: .gitignore  README.md  pyproject.toml
notebooks/: movie-review-sentiment.ipynb
