[tool.poetry]
name = "movie-review-sentiment"
version = "0.1.0"
description = ""
authors = ["Grainier Perera <grainier@apache.org>"]
readme = "README.md"
packages = [{include = "movie_review_sentiment"}]

[tool.poetry.dependencies]
python = "^3.8"

# Data manipulation and analysis
pandas = "1.3.5"
numpy = "1.19.5"

# Data visualization
matplotlib = "3.5.1"
seaborn = "0.11.2"

# Natural Language Processing
nltk = "3.6.7"
wordcloud = "1.8.1"

# Machine Learning Models and Preprocessing
scikit-learn = "0.24.2"

# Deep Learning Libraries
tensorflow = "2.6.0"

# Jupyter Notebook (if needed)
notebook = "6.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

